Added facebook login redirect for homepage. NOTE: this does not sign the user in, it merely redirects the user to the facebook login page, I was unable to create a Meta developer acount due to a technical issue on their end. I also added a facebook icon, facebook.png, and adjusted the bootstrap.custom.css file to create a visually accurate facebook button from scratch

--- a/frontend/src/assets/styles/bootstrap.custom.css
+++ b/frontend/src/assets/styles/bootstrap.custom.css
@@ -12110,3 +12110,12 @@ fieldset:disabled .btn {
     display: none !important;
   }
 }
+
+.fbButton{
+  width: 225px;
+  height: 45px;
+  padding: 7px 10px;
+  border-radius: 2px;
+  color: #ffffff;
+  background-color: #1877F2;
+}
